6-4提交,markdown使用方法更新,使用todotree管理记录工作中的方法和工具

--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -2,7 +2,7 @@
 
 ### 重要的事
 
-$$ 我擦  $$
+$$ 还能居中？  $$
 
 ### 第一周
 ---
@@ -23,9 +23,38 @@ $$ 我擦  $$
 有哪些要记录的处理的
 > 技术要胜任工作。css  js-  vue 有空再说。
 > js  部分内容很多，继续。  问题： 要复盘，要巩固，避免遗忘 目前还没有好办法。
+> js  在循环，在if中  return 返回的问题 ，暂未解决
 
 today
 > 应该还是绿立方，加强自我管理。 意识到自己在做什么，用了多久
 > 花时间的停下记录跳过去，
 
-#### 06月04日01:22:32 星期四
+#### 2020年06月05日00:34:54 星期五
+今天的任务（星期四）
+> 上午摸鱼，下午摸鱼，下午六点开始安排任务。采购单、供应商价格管理的逻辑变更以及波及的其他页面的变更，包括生产材料模块的页面以及。物料模块的所有页面时间还是有些紧张
+结束时间
+> 起码周五下午才能完成。
+花费时间的问题
+
+> 判断isNaN  
+> 删除多余的list  
+> 一些无脑走神错误，耽误时间 
+
+是否解决，何时解决
+> 已解决，有疑问，Number.isNaN和 isNaN 的区别在哪里？
+
+有哪些要记录处理的
+> 技术要胜任工作 js css vue  包括公司的技术文档
+> 没有那么多为什么，做就好了不要停下来
+> 疑问应该记录起来
+> 以及做好关于 工作中涉及知识的总结记录
+
+有什么收获
+> 生活已经被工作充满。难免会想这样值得不值得
+> 对判断NaN,isNaN 
+> 对删除对象的属性 delete obj['key']即可
+
+today
+> 绿立方，不知道周六加班否 ，下星期应该有紧急项目，只有自己强大才能得心应手  不要停bro
+> * 要管理时间 ，下载时间插件 
+> * 我是你爸爸 不要异想天开
