--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -7,54 +7,83 @@ $$ 还能居中？  $$
 ### 第一周
 ---
 #### 06月04日01:06:18 星期四
-今天的任务（星期三）
+---
+**今天的任务（星期三）**
 > 下午安排，种子，育苗基质，肥料，植保，营养液，采购单，页面添加 产品规格， 产品规格页添加一个新字段
 > 隐含详情页面的变更。 部分逻辑的重新调试。
 
-结束时间
+**结束时间**
 > 没有底气，总感觉有问题，此时勉强算结束。
 
-花费时间的问题
+**花费时间的问题**
 > 1. 浮点计算精度问题。 大概2个小时，才意识到。
 
-是否解决，何时解决
+**是否解决，何时解决**
 > 已百度现成工具类，并保存，争取不在犯此事。
 
-有哪些要记录的处理的
+**有哪些要记录的处理的**
 > 技术要胜任工作。css  js-  vue 有空再说。
 > js  部分内容很多，继续。  问题： 要复盘，要巩固，避免遗忘 目前还没有好办法。
 > js  在循环，在if中  return 返回的问题 ，暂未解决
 
-today
+**today**
 > 应该还是绿立方，加强自我管理。 意识到自己在做什么，用了多久
 > 花时间的停下记录跳过去，
 
 #### 2020年06月05日00:34:54 星期五
-今天的任务（星期四）
+---
+**今天的任务（星期四）**
+
 > 上午摸鱼，下午摸鱼，下午六点开始安排任务。采购单、供应商价格管理的逻辑变更以及波及的其他页面的变更，包括生产材料模块的页面以及。物料模块的所有页面时间还是有些紧张
 结束时间
 > 起码周五下午才能完成。
-花费时间的问题
+**花费时间的问题**
 
 > 判断isNaN  
 > 删除多余的list  
 > 一些无脑走神错误，耽误时间 
 
-是否解决，何时解决
+**是否解决，何时解决**
 > 已解决，有疑问，Number.isNaN和 isNaN 的区别在哪里？
 
-有哪些要记录处理的
+**有哪些要记录处理的**
 > 技术要胜任工作 js css vue  包括公司的技术文档
 > 没有那么多为什么，做就好了不要停下来
 > 疑问应该记录起来
 > 以及做好关于 工作中涉及知识的总结记录
 
-有什么收获
+**有什么收获**
 > 生活已经被工作充满。难免会想这样值得不值得
 > 对判断NaN,isNaN 
 > 对删除对象的属性 delete obj['key']即可
 
-today
+**today**
 > 绿立方，不知道周六加班否 ，下星期应该有紧急项目，只有自己强大才能得心应手  不要停bro
 > * 要管理时间 ，下载时间插件 
 > * 我是你爸爸 不要异想天开
+
+#### 2020年06月05日19:51:15 星期五
+---
+**今天的任务**
+> 1. 9:30  这一个小时，查看配置尝试使用了vscodevim 插件。 还没掌握，所以停止。
+> 2. 10:45  半个小时的js视频，昨天的供应商价格二级修改问题。开始工作
+> 3. 11:45  供应商价格 这里的增删改 理结构，一个小时 
+> 4. 13:48  调试循环样式 写循环赋值逻辑
+> 5. 14:48  从种子编辑页到-工程材料页的copy 新的问题。供应商的唯一性。
+> 6. 15:37  变更供应商的唯一性。 现在供应商价格二级变更的问题。
+> 7. 16:37   bug修改。供应商的保存修改。以及其他
+> 8. 17:37   没注意.. 改bug 
+> 9. 18:38   所有的编辑页基本完成。开始所有的详情页。并测试跑通
+> 10. 19.39  所有的详情页 基本9成5   疑问： 采购单多个问题。
+>  采购单多个同样产品问题。 测试跑通。 
+**结束时间**
+> 今天暂停。 明天如无意外可以
+
+**有哪些要记录处理的**
+> 暂无。
+
+**有什么记录的**
+> 心不静
+
+**today**
+> 如果在家就放松吧。加班就加班吧
