--- a/JS/公式.md
+++ b/JS/公式.md
@@ -2,7 +2,7 @@
 ### 方法 小细节
 问题|问题二级|解决|知识点|其他补充
 --|--|--|--|--
-循环组件|多余的list|delete item[‘list’]|对象属性的删除|二级会不回显
+循环组件|多余的list|delete item[‘list’]|对象属性的删除,尝试使用数组的filter方式？|二级会不回显
 |列表循环|一个全局变量|arr.push.apply(arr,arr2)|数组|
 |||arr.push.(…arr2)|数组解构|
 ||判断NaN| isNaN()|| 与Number.isNaN的异同？
