--- a/md/临时记录.md
+++ b/md/临时记录.md
@@ -1,6 +1,34 @@
 # 一级目录
 `WOCD`
+供应商价格插一个子表。 关联产品id
+一个供应商 提供多个产品，以及多个规格 每一条关联一个对应的产品id
+ 
+一个产品关联  多个供应商，提供的 一个产品的多个规格
+child
+_id
+product_id
+每一条供应商的产品详情 
+产品用 产品的id 去查此表做回显
 
+种子
+育苗基质
+营养液原料
+植保用品
+成品水
+
+办公用品
+办公设备
+工程材料
+
+生产工具     添加   数量  状态   仓库名称   回显要调查循环
+生产设备
+耗材
+
+生产材料
+
+
+
+供应商价格-> 用供应商id去供应商价格表查
 `wo`
 
 
