--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -59,22 +59,25 @@ $$ 还能居中？  $$
 
 **today**
 > 绿立方，不知道周六加班否 ，下星期应该有紧急项目，只有自己强大才能得心应手  不要停bro
-> * 要管理时间 ，下载时间插件 
+> * 要管理时间 ，下4载时间插件 
 > * 我是你爸爸 不要异想天开
 
 #### 2020年06月05日19:51:15 星期五
 ---
 **今天的任务**
-> 1. 9:30  这一个小时，查看配置尝试使用了vscodevim 插件。 还没掌握，所以停止。
-> 2. 10:45  半个小时的js视频，昨天的供应商价格二级修改问题。开始工作
-> 3. 11:45  供应商价格 这里的增删改 理结构，一个小时 
-> 4. 13:48  调试循环样式 写循环赋值逻辑
-> 5. 14:48  从种子编辑页到-工程材料页的copy 新的问题。供应商的唯一性。
-> 6. 15:37  变更供应商的唯一性。 现在供应商价格二级变更的问题。
-> 7. 16:37   bug修改。供应商的保存修改。以及其他
-> 8. 17:37   没注意.. 改bug 
-> 9. 18:38   所有的编辑页基本完成。开始所有的详情页。并测试跑通
-> 10. 19.39  所有的详情页 基本9成5   疑问： 采购单多个问题。
+
+序号|时间| 内容|备忘
+--|--|--|--
+> 1.| 9:30 | 这一个小时，查看配置尝试使用了vscodevim 插件。 还没掌握，所以停止。
+> 2.|10:45 | 半个小时的js视频，昨天的供应商价格二级修改问题。开始工作
+> 3. |11:45|  供应商价格 这里的增删改 理结构，一个小时 
+> 4. |13:48 | 调试循环样式 写循环赋值逻辑
+> 5. |14:48  |从种子编辑页到-工程材料页的copy 新的问题。供应商的唯一性。
+> 6. |15:37  |变更供应商的唯一性。 现在供应商价格二级变更的问题。
+> 7. |16:37   |bug修改。供应商的保存修改。以及其他
+> 8. |17:37   |没注意.. 改bug 
+> 9. |18:38   |所有的编辑页基本完成。开始所有的详情页。并测试跑通
+> 10. |19:    39  |所有的详情页 基本9成5   疑问： 采购单多个问题。
 >  采购单多个同样产品问题。 测试跑通。 
 **结束时间**
 > 今天暂停。 明天如无意外可以
