--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -111,3 +111,10 @@ $$ 还能居中？  $$
 ### 第二周
 ---
 #### 2020年06月08日09:06:34 星期一
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+1. |9.55| 重新回顾数组知识，昨天的循环组件|
+2. |19.18| 一个小时开会。改样式。看数组对象视频
+3. |21。18| 吃饭，聊天。看视频
