--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -118,3 +118,15 @@ $$ 还能居中？  $$
 1. |9.55| 重新回顾数组知识，昨天的循环组件|
 2. |19.18| 一个小时开会。改样式。看数组对象视频
 3. |21。18| 吃饭，聊天。看视频
+4. |2.00| 重新搞博客。还没搞好。
+   
+今天比较轻松 
+日历控件： 
+1. 过去的日历都不能点
+2. 上下滑动
+3. 左右箭头  暂不处理
+4. 下方可以接收状态 并做颜色区分。
+5. 某一日期的点击事件
+
+today
+写航小康逻辑 期待
