--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -130,3 +130,19 @@ $$ 还能居中？  $$
 
 today
 写航小康逻辑 期待
+
+#### 2020年06月09日09:15:08 星期二
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+1. |-|摸鱼，对日历控件 改绿立方bug，做航小康|
+   
+完成时间
+已完成
+
+记录
+关于数据库表结构的梳理能力， 本质是什么？逻辑思维？ 对事物的快速建模？ 经验？
+
+today
+做航小康逻辑。 消息、群组。收藏、日历
