--- a/vue/基础知识.md
+++ b/vue/基础知识.md
@@ -1,9 +1,12 @@
 $$基本更改数据$$
 vue基本指令
-1. v-text
-2. v-html 
+
+1. Mustache{{}}  语法
+2. v-text
+   1. 会覆盖
+3. v-html 
    1. innerHtml 普通文本没有差异 可以解析标签
-3. v-on|@
+4. v-on|@
    1. 为元素绑定事件 
    2. v-on:click="a"| @click="a"
    3. 对应methods{a:function(){}}
@@ -11,20 +14,22 @@ vue基本指令
       1. https://cn.vuejs.org/v2/api/#v-on
       2. @keyup.enter="fun"
    5. this  计数器，不好使
-4. v-show
+5. v-show
    1. css 操作样式的显示隐藏
    2. display none
-5. v-if  
+6. v-if  
    1. 根据表达式的真假，切换元素的显示和隐藏
    2. 操作dom数对性能的消耗大
-6. v-bind || :src
+7. v-bind || :src
    1. 设置元素的属性
    2. <img v-bind:src="imgsrc"/>
    3. v-bind:class="{active:isactive}"
-7. v-for
+8. v-for
    1. 根据数据生成列表结构
    2. v-for:"(item index) in arr"
-8. v-model
-   1. 获取和设置表单元素的值（双向数据绑定）
-   2. 似乎直接就可以？ 必要性
- 
+9.  v-model
+   3. 获取和设置表单元素的值（双向数据绑定）
+   4. 似乎直接就可以？ 必要性
+10. v-once  出现一次  不进行其他变化 没有表达式
+11. v-pre>{{message}}   不解析直接展示内容
+12. v-cloak  初始化显示隐藏？ 
