--- a/md/临时记录.md
+++ b/md/临时记录.md
@@ -1,45 +1,155 @@
 # 一级目录
-`WOCD`
-供应商价格插一个子表。 关联产品id
-一个供应商 提供多个产品，以及多个规格 每一条关联一个对应的产品id
- 
-一个产品关联  多个供应商，提供的 一个产品的多个规格
-child
-_id
-product_id
-每一条供应商的产品详情 
-产品用 产品的id 去查此表做回显
-
-种子
-育苗基质
-营养液原料
-植保用品
-成品水
-
-办公用品
-办公设备
-工程材料
-
-生产工具     添加   数量  状态   仓库名称   回显要调查循环
-生产设备
-耗材
-
-生产材料
-
-健康商城  商城首页
-        体检中心       医院体检预约套餐列表
-        体检套餐详情    分享弹窗
-
-商城首页
-体检首页
-体检中心
-体检套餐详情
+`WO
 
 
-供应商价格-> 用供应商id去供应商价格表查
+采购单  生产材料 和 供应商之间不匹配
+消息*
+ 消息列表
+ 群组消息列表
+ 消息详情
 
-生产材料
+我的体检
+ 体检时间预约 日历  ---
+
+我的
+ 我的页面
+ 基本信息展示*
+ 基本信息修改*
+ 我的收藏列表*
+ 优惠券*
+
+
+ ### 用户表
+ ---
+序号|时间| 用户表 user|备忘
+--|--|--|--
+头像|pic|
+昵称|nickname
+性别|sex
+生日|birth
+身高|height
+体重|weight
+用户id|_id
+婚姻 |marry_status
+关联微信|openid
+密码|passowrd
+手机号|phone
+创建时间|
+更新时间|
+
+### 收藏表
+---
+序号|时间| 收藏Collection|备忘
+--|--|--|--
+内容id| content_id
+用户id| user_id
+创建时间| 
+更新时间|
+收藏分类 | collection_type|
+-id|
+
+### 消息话题表
+---
+序号|时间|话题  topic|备忘   一个房间号
+--|--|--|--
+对话id|
+话题名称| topic_title
+话题头像| topic_img
+话题类型| topic_type|群组 个人 系统 医院 其他
+发起话题人id| create_uid
+发起话题人id| create_uname
+参与话题人id| join_id|可能是数组
+创建话题时间|
+更新话题时间|
+
+### 消息记录表
+序号|时间| 聊天记录表 chat_record|备忘   一个房间号
+--|--|--|--
+话题id| topic_id | 关联某一个话题id
+_id|
+聊天内容|msg|富文本
+发送人id|send_uid
+发送时间，创建时间|||
+更新时间|
+是否删除消息|isdel|
+是否撤回消息|isrecall|
+
+
+### 优惠券
+---
+序号|时间|优惠券基础|备忘   医院能不能发
+--|--|--|--
+医院id|
+医院名称|
+券名称|
+券状态|
+发券数量|
+使用范围|
+面值金额|
+开始生效时间|
+最终失效时间|
+适用用户范围|
+创建时间|
+更新时间|
+
+用户优惠券
+用户id
+优惠券id
+已领取的数量|
+已使用的数量|
+
+优惠券使用记录
+
+优惠券列表
+查询：券的种类 状态 名称 id 日期
+输出：
+
+### 体检预约表
+---
+
+
+医院 体检时间 读接口
+中文名|字段名|备忘 
+--|--|--|--
+用户id|
+体检id|_id
+创建时间|
+更新时间|
+预约状态 已预约未预约
+体检单状态  已体检 未体检 
+体检对应的套餐id|
+体检对应的套餐名称|
+体检日期|
+
+
+
+一个体检时间对应一个套餐
+
+
+
+体检OK
+
+消息
+添加个人信息日历控件  是否需要精确到时分秒
+优惠券同步 奎哥
+
+
+回显的时候
+产品下拉赋值 post_id不为空或者  不动总价 
+
+url不为空 删除一个
+下拉变更的时候 
+
 
 `wo`
+
+
+体检
+收藏
+用户
+
+
+消息
+优惠券
 
 
