--- a/vue/基础知识.md
+++ b/vue/基础知识.md
@@ -20,7 +20,7 @@ vue基本指令
 6. v-if  
    1. 根据表达式的真假，切换元素的显示和隐藏
    2. 操作dom数对性能的消耗大
-7. v-bind || :src
+7. v-bind || 语法糖:src
    1. 设置元素的属性
    2. <img v-bind:src="imgsrc"/>
    3. v-bind:class="{active:isactive}"
