--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -146,3 +146,23 @@ today
 
 today
 做航小康逻辑。 消息、群组。收藏、日历
+
+#### 2020年06月10日10:01:38 星期三
+---
+今天的活动
+
+序号|时间| 内容|备忘
+--|--|--|--
+1. |10：05| vue视频| 
+2. |16：02|无脑忙
+
+有点累
+
+today 
+
+#### 2020年06月11日04:43:47 星期四
+---
+
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
