--- a/JS/公式.md
+++ b/JS/公式.md
@@ -6,6 +6,7 @@
 |列表循环|一个全局变量|arr.push.apply(arr,arr2)|数组|
 |||arr.push.(…arr2)|数组解构|
 ||判断NaN| isNaN()|| 与Number.isNaN的异同？
+||window.location.href|返回地址栏url
 
 
 
