--- a/md/临时记录.md
+++ b/md/临时记录.md
@@ -1,90 +1,32 @@
 # 一级目录
-`WO
 
 
-采购单  生产材料 和 供应商之间不匹配
+入库单  产品查不到  供应商价格表的字段有变更
 消息*
  消息列表
  群组消息列表
  消息详情
 
 我的体检
- 体检时间预约 日历  ---
-
+ 体检时间预约 日历 
 我的
  我的页面
- 基本信息展示*
- 基本信息修改*
  我的收藏列表*
  优惠券*
 
 
- ### 用户表
- ---
-序号|时间| 用户表 user|备忘
---|--|--|--
-头像|pic|
-昵称|nickname
-性别|sex
-生日|birth
-身高|height
-体重|weight
-用户id|_id
-婚姻 |marry_status
-关联微信|openid
-密码|passowrd
-手机号|phone
-创建时间|
-更新时间|
-
-### 收藏表
----
-序号|时间| 收藏Collection|备忘
---|--|--|--
-内容id| content_id
-用户id| user_id
-创建时间| 
-更新时间|
-收藏分类 | collection_type|
--id|
-
-### 消息话题表
----
-序号|时间|话题  topic|备忘   一个房间号
---|--|--|--
-对话id|
-话题名称| topic_title
-话题头像| topic_img
-话题类型| topic_type|群组 个人 系统 医院 其他
-发起话题人id| create_uid
-发起话题人id| create_uname
-参与话题人id| join_id|可能是数组
-创建话题时间|
-更新话题时间|
-
-### 消息记录表
-序号|时间| 聊天记录表 chat_record|备忘   一个房间号
---|--|--|--
-话题id| topic_id | 关联某一个话题id
-_id|
-聊天内容|msg|富文本
-发送人id|send_uid
-发送时间，创建时间|||
-更新时间|
-是否删除消息|isdel|
-是否撤回消息|isrecall|
 
 
 ### 优惠券
 ---
-序号|时间|优惠券基础|备忘   医院能不能发
+序号|时间|优惠券类型|备忘   医院能不能发
 --|--|--|--
 医院id|
 医院名称|
 券名称|
 券状态|
 发券数量|
-使用范围|
+使用范围|| 仅限健康问答，其他
 面值金额|
 开始生效时间|
 最终失效时间|
@@ -92,11 +34,31 @@ _id|
 创建时间|
 更新时间|
 
-用户优惠券
-用户id
-优惠券id
+
+优惠券表
+类型id
+兑换码-
+关联分类
+使用状态
+是否删除
+uid
+
+
+
+序号|时间|优惠券用户|备忘   医院能不能发
+--|--|--|--
+用户优惠券|
+用户id|
+优惠券id|
+面额|
+状态|已使用|未使用
 已领取的数量|
 已使用的数量|
+使用商家
+
+
+
+
 
 优惠券使用记录
 
@@ -126,14 +88,6 @@ _id|
 一个体检时间对应一个套餐
 
 
-
-体检OK
-
-消息
-添加个人信息日历控件  是否需要精确到时分秒
-优惠券同步 奎哥
-
-
 回显的时候
 产品下拉赋值 post_id不为空或者  不动总价 
 
@@ -141,15 +95,39 @@ url不为空 删除一个
 下拉变更的时候 
 
 
-`wo`
+在线客服
+健康助理
+人工
+群组
+
+一对一 统一处理
+在线客服
+健康助理
 
 
-体检
-收藏
-用户
+     
+一对所有  默认加入一个房间 系统消息
+系统消息
 
 
-消息
-优惠券
+群组
+一对多
 
 
+话题里：
+一对一
+    在线客服  只有一个在线客服 会不会保留在消息列表中   会不会保留聊天记录
+    健康助理   n个健康助理   
+        获得医院
+一对多
+    系统消息 * 创建账号就加入  会保留在消息列表中   会保留聊天记录 
+    全局广播 私人广播   批量广播
+     查消息类型为全局
+     查接收人是自己
+     查自己i
+    群组   会保留在消息列表中   会保留聊天记录
+
+健康助理和系统消息
+
+
+  
