--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -166,3 +166,17 @@ today
 今天的活动
 序号|时间| 内容|备忘
 --|--|--|--
+小蜜页面的搭建|开会|消息|优惠券|
+
+说点啥？
+失败 一忙心态就绷不住
+
+today 
+收藏 体检日历
+
+#### 2020年06月12日09:04:38 星期五
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
