--- a/JS/公式.md
+++ b/JS/公式.md
@@ -174,3 +174,59 @@ function(){
     $('#id').css('display', 'block') // 显示
 }
 ```
+
+#### 方法 聊天滚动到底部 ，不完美
+```javascript
+function(){
+let ele  =  document.querySelector('#Cessbfizf5r3vvfs00');
+
+if(ele.scrollHeight > ele.clientHeight) {
+
+  let clientHeight = ele.clientHeight;
+  let scrollHeight = ele.scrollHeight;
+  
+  
+  var h = scrollHeight-clientHeight
+  console.log("应该滚",h)
+
+       timer=setInterval(function(){
+           var scrollTop=ele.scrollTop//||ele.body.scrollTop;
+             var ispeed=Math.floor(h/6);
+         ele.scrollTop = ele.scrollTop+ispeed;
+           if(ele.scrollTop>(h+50)){
+             clearInterval(timer);
+             console.log("停了")
+           }
+           console.log("滚了",ele.scrollTop)
+       },30)
+}
+}()
+
+function(){
+let ele  =  document.querySelector('#Cessbfizf5r3vvfs00');
+
+if(ele.scrollHeight > ele.clientHeight) {
+
+  let clientHeight = ele.clientHeight;
+  let scrollHeight = ele.scrollHeight;
+  
+  
+  var h = scrollHeight-clientHeight
+  console.log("应该滚",h)
+
+       timer=setInterval(function(){
+           var scrollTop=ele.scrollTop//||ele.body.scrollTop;
+             var ispeed=Math.floor(h/6);
+         ele.scrollTop = ele.scrollTop+ispeed;
+           if(ele.scrollTop>(h+50)){
+             clearInterval(timer);
+             console.log("停了")
+           }
+           console.log("滚了",ele.scrollTop)
+       },30)
+
+
+}
+    
+
+}()
