--- a/md/临时记录.md
+++ b/md/临时记录.md
@@ -129,5 +129,26 @@ url不为空 删除一个
 
 健康助理和系统消息
 
+定向关联
+特定的问句
+特定的答句
 
-  
+## 问答主表
+* id
+* 问题
+* 答案
+* 分类
+## 答案分类子表
+* id
+* pid 关联父id
+* 答案
+## 消遣休闲表
+* id
+* content
+## 回话日志表
+* id
+* open_id
+* create_tiem
+* req_msg
+* resp_msg
+* chat_category
