--- a/md/数据库表.md
+++ b/md/数据库表.md
@@ -59,4 +59,21 @@ _id|
 是否删除消息|isdel|
 是否撤回消息|isrecall|
 消息类型|msg_type|  系统 个人
+通知角色|
+
+#### 消息关联表  chat_user
+ ---
+ 
+名称|字段| 描述 |其他
+--|--|--|-- 
+是否已读|
+创建时间|
+阅读时间|
+消息id|
+用户id|
+
+
+
+
+
 
