--- a/vue/基础知识.md
+++ b/vue/基础知识.md
@@ -36,5 +36,10 @@ vue基本指令
 
 
 #### 2
-computed:计算属性
-
+#### computed:计算属性
+* getter
+  * fun:function(){return: 22}
+* setter
+  * 一般没有setter  只读属性
+* 缓存
+* 
