--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -180,3 +180,19 @@ today
 今天的活动
 序号|时间| 内容|备忘
 --|--|--|--
+
+#### 2020年06月15日09:15:39 星期一
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+
+连续加班2天航小康。
+改bug
+
+vue js都停了 
+项目的发布 部署知识
+心不静 心不坚 
+能力，发展 兄弟
+**消息和消息表关联起来 存消息**
