--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -181,6 +181,8 @@ today
 序号|时间| 内容|备忘
 --|--|--|--
 
+### 第三周
+--- 
 #### 2020年06月15日09:15:39 星期一
 ---
 今天的活动
@@ -196,3 +198,21 @@ vue js都停了
 心不静 心不坚 
 能力，发展 兄弟
 **消息和消息表关联起来 存消息**
+
+组织架构：没有权限 关联角色   
+权限：角色 功能 
+
+菜单表：menu *
+    名称
+    地址
+    level
+    编号
+    排序
+    上级菜单id
+    上级菜单名称
+角色表：
+用户表：
+第一步 出个表单 菜单表单
+
+
+
