--- a/md/数据库表.md
+++ b/md/数据库表.md
@@ -72,6 +72,47 @@ _id|
 消息id|
 用户id|
 
+#### 合同协议表  agreement
+ ---
+ 
+名称|字段| 描述 |其他
+--|--|--|-- 
+协议编号| number|
+协议名称| name|
+协议类型|type| 特殊、一般？
+协议状态|status|待生效、作废、已签订？
+企业名称| enterprise_name|(乙方)
+企业签订人| enterpries_user|(乙方)
+企业签订人联系方式|enterpries_uphone|
+医疗机构名称(公司)| medical_name |(甲方)
+医疗机构签订人|medical_user|(甲方）
+医疗机构签订人联系方式|medical_uphone|
+协议签订日期| signed_date|
+协议截止日期| end_date|
+协议生效日期|
+协议失效日期|
+备注|remark|
+协议内容(附件)| file|
+是否作废|removed| 0、time(作废)
+收款|
+索赔|
+
+#### 结算
+ ---
+ 
+名称|字段| 描述 |其他
+--|--|--|-- 
+协议号| agreement_number
+预结算金额| pre_money
+实际结算金额| real_money
+计划结算日期| pre_date
+实际结算日期| real_money
+
+协议 与 订单直接的关系
+订单是否需要关联协议 
+
+
+
 
 
 
