--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -199,20 +199,74 @@ vue js都停了
 能力，发展 兄弟
 **消息和消息表关联起来 存消息**
 
-组织架构：没有权限 关联角色   
-权限：角色 功能 
-
-菜单表：menu *
-    名称
-    地址
-    level
-    编号
-    排序
-    上级菜单id
-    上级菜单名称
-角色表：
-用户表：
-第一步 出个表单 菜单表单
+#### 2020年06月19日10:57:20 星期五
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
 
 
 
+到30号
+一共12天 怎么过？
+天天加班
+收获是什么:耐性，熟练度，熟悉业务 熟悉项目  有计划的提升 
+欠缺什么： 什么都缺
+
+#### 2020年06月20日23:29:47 星期六
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+|||登录注册 认证页  登录注册 验证码|
+
+绿立方回显 理理航小康
+
+#### 2020年06月22日10:00:22 星期日
+---
+登录注册存在的问题：
+登录：登录存session跳转首页  首页查询缓存
+注册：注册存session跳转首页  
+个人认证 状态已认证
+企业认证 没有状态 存入用户表以及session
+密码数据类型、缓存键不对
+首页缓存跳转判断逻辑不对
+
+### 第四周
+--- 
+#### 2020年06月22日10:00:09 星期一
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+
+
+#### 2020年06月24日09:23:07 星期三
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+昨天航小康 消息模块
+在线沟通 查看问题。关闭问题。  
+剩余用户列表 关注用户 用户资料展示 
+
+#### 2020年06月25日12:09:16 星期四
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+端午节休息一天
+明天做懒盒
+任务：
+* 商品分类  更改样式
+  * 分类列表页
+  * 二级商品列表页
+* 搜索  更改样式  搜索结果 历史记录
+* 商品详情  页面数据
+* 王子玉 和陈诚 牛  优惠券  支付  退款 
