--- a/JS/公式.md
+++ b/JS/公式.md
@@ -6,7 +6,8 @@
 |列表循环|一个全局变量|arr.push.apply(arr,arr2)|数组|
 |||arr.push.(…arr2)|数组解构|
 ||判断NaN| isNaN()|| 与Number.isNaN的异同？
-||window.location.href|返回地址栏url
+||window.location.href|返回地址栏url，
+瀑布流实现|| div触底回调 100vh 总页数 ，当前页，底部的显示隐藏|
 
 
 
@@ -230,3 +231,16 @@ if(ele.scrollHeight > ele.clientHeight) {
     
 
 }()
+
+#### 方法 对象数组排序
+
+var compare = function (obj1, obj2) { 
+  var val1 = obj1.count; var val2 = obj2.count; 
+  if (val1 < val2) { return -1; }
+  else if (val1 > val2) { return 1; } 
+  else { return 0; } 
+} 
+
+
+
+console.log(ssss.sort(compare))
