--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -270,3 +270,15 @@ vue js都停了
 * 搜索  更改样式  搜索结果 历史记录
 * 商品详情  页面数据
 * 王子玉 和陈诚 牛  优惠券  支付  退款 
+
+#### 2020年06月27日09:25:55 星期六
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+3天时间 航小康
+少扯犊子，多做事
+完成大模块，对产品有更深的理解
+就3天而已，能怎么样
