--- a/每周总结/6月.md
+++ b/每周总结/6月.md
@@ -273,12 +273,55 @@ vue js都停了
 
 #### 2020年06月27日09:25:55 星期六
 
----
-今天的活动
-序号|时间| 内容|备忘
---|--|--|--
 
 3天时间 航小康
 少扯犊子，多做事
 完成大模块，对产品有更深的理解
 就3天而已，能怎么样
+
+// 循环 子级多选 
+//复选框 
+// 
+
+#### 2020年06月28日09:22:29 星期日
+
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+消息从医生app到医生web到用户app
+
+
+#### 2020年06月29日09:37:56 星期一
+---
+今天的活动
+序号|时间| 内容|备忘
+--|--|--|--
+
+bug较多 兄弟少说话 多干活是、
+
+#### 2020年07月01日09:46:39 星期三
+
+
+---
+#### 月底总结
+搞得事情
+
+>绿立方  航小康 消息
+
+收获
+
+> why how what  记录习惯的基本形成  
+
+下个月
+
+> 少说，多做，在完成工作的同时 力扣刷题，要保持 继续记录  加入社群，寻找归属感 我要说话
+
+
+
+最后
+
+漫长而又仓促 ，，回头想想 脑子里一片空白， 
+似乎没有任何成长，只是又累又仓促，东奔西跑 一无所获
+总结 ，记录 ，成长
