--- a/JS/公式.md
+++ b/JS/公式.md
@@ -103,6 +103,20 @@ function(arr, key){
   })
   return res;
 }
+//数组对象去重
+function(arr){
+  /*去重*/
+  var result = [];
+  var obj = {};
+  for(var i =0; i<arr.length; i++){
+   if(!obj[arr[i]._id]){
+     result.push(arr[i]);
+     obj[arr[i]._id] = true;
+   }
+  }
+  return result;
+}(#arr#)
+
 ```
 #### 方法 普通数组转对象数组
 ```javascript
@@ -231,16 +245,17 @@ if(ele.scrollHeight > ele.clientHeight) {
     
 
 }()
-
+```
 #### 方法 对象数组排序
-
+```javascript
 var compare = function (obj1, obj2) { 
   var val1 = obj1.count; var val2 = obj2.count; 
   if (val1 < val2) { return -1; }
   else if (val1 > val2) { return 1; } 
   else { return 0; } 
 } 
-
-
-
 console.log(ssss.sort(compare))
+```
+
+
+
