--- a/每周总结/7月.md
+++ b/每周总结/7月.md
@@ -10,3 +10,37 @@
 
 序号|时间| 内容|备忘
 --|--|--|--
+
+航小康 消息 预约
+
+
+### 第一周
+---
+#### 2020年07月06日11:21:52 星期一
+
+**今天的任务**
+
+序号|时间| 内容|备忘
+--|--|--|--
+
+
+今天毕业答辩日 再拿个毕业证就是社会人 现在也是。
+
+不要做一个无用功的奋斗比。 把脑子带上。
+
+有欲望怎么办？ 有欲望有什么错？ 找到适当的宣泄途径宣泄出来。就还是一个正常人。
+
+---
+给家里打电话。买助听器
+
+不要忘了自考。 
+1. 数据结构
+   1. 结合力扣
+2. 高等数学
+   1. 重点
+3. 软件工程
+   1. 打酱油
+
+每天的尽量的总结。知道自己每天在干什么
+
+住公司的问题？最近还要住 需要总结工作 提升效率
