--- a/1. ycgrow_up/助力图开/样式.md
+++ b/1. ycgrow_up/助力图开/样式.md
@@ -6,7 +6,7 @@
     display: flex;
     width: max-content;
 }
-////radio-div 的父级 的父级
+//radio-div 的父级 的父级
 #Cgxsqfmnnw73y17k00::-webkit-scrollbar {
     display: none;
     /* Chrome Safari */
