--- a/每周总结/7月.md
+++ b/每周总结/7月.md
@@ -14,7 +14,7 @@
 航小康 消息 预约
 
 
-### 第一周
+### 第二周
 ---
 #### 2020年07月06日11:21:52 星期一
 
@@ -44,3 +44,213 @@
 每天的尽量的总结。知道自己每天在干什么
 
 住公司的问题？最近还要住 需要总结工作 提升效率
+
+
+### 第二周
+---
+#### 2020年07月08日10:38:25 星期三
+昨天 星期二
+**今天的任务**
+
+序号|时间| 内容|备忘
+--|--|--|--
+
+组织架构的基本搭建
+
+
+#### 2020年07月09日08:46:11 星期四
+
+**今天的任务**
+
+序号|时间| 内容|备忘
+--|--|--|--
+
+华治
+组织权限
+
+
+这星期比较轻松 摸鱼加华治组织架构
+
+### 第二周
+---
+
+#### 2020年07月13日09:15:10 星期一
+
+**今天的任务**
+
+序号|时间| 内容|备忘
+--|--|--|--
+华治梳理
+buglist
+
+复盘很重要啊！！！！ 每天要复盘！！！！
+
+
+#### 2020年07月15日09:22:32 星期三
+
+**今天的任务**
+
+序号|时间| 内容|备忘
+--|--|--|--
+
+
+
+
+编号（4）华治项目目前（7-20）-完成百分比
+* pc后台：
+   1. 前台管理 70%
+   2. 后台管理 100%
+   3. 企业管理 100%
+   4. 信息管理 50%
+   5. 标签管理 70%  
+* 小程序:
+   1. 首页     40%
+      1. 信息流部分 50% （需要客户提供内容数据）
+   2. 工作台    70%
+   3. 个人中心  90%
+2.今天已完成
+   1. 后台bug
+      1. 编辑角色-删除排序字段
+      2. 角色列表-添加按角色进行筛选
+   暂停（因客户暂未提供数据） 
+3.未完成
+   1. buglist
+   2. 对接前端添加返回按钮
+4.下步计划
+   1. bug修改 （7-18-）
+
+投入人力：
+   无
+
+日报
+1. 今天已完成
+  1. 新奥项目:
+     1. 推介-市场化：签约
+     2. 创值投资列表
+     3. 创值投资详情
+     4. 前端对接控件
+2. 未完成
+   1. 新奥项目：
+      1. 创值投资-查看
+3. 下步计划
+   1. 华治buglist
+   2. 华治bug任务梳理
+   3. 新奥项目任务
+
+
+
+
+项目；5f100f0bcd0d681fd92090d8
+投资：5f0fc897c24b41571f59a073
+
+
+
+7-28日华治项目会议纪要。
+信息详情
+   涉事信息和广告信息合并
+   删除举报人和联系电话代言人。版本展示。
+   涉事主体。
+   违法类型，违法表现。
+   发布页 ：url需要展示为图片
+   违法判定模块的页面展示。 
+   分享整个页面。
+   完整的假数据。
+      
+推荐页
+   企业弹窗不展示了
+   
+
+企业角色
+   企业都是处理  处理完以后 企业会看到。
+
+   删除个人绩效
+   企业积分
+      默认分数-扣分单，时间 先把页面展示出来
+   任务
+      推荐页，信息一定属于企业。能否主动认领？
+      处理进度。
+      政府督促。
+
+
+政府
+   所有都是督办。
+   办事员 可以不处理 可以处理。
+   会查看到企业的任务完成状态
+
+pc web后台
+   企业列表
+      去掉删除按钮。
+   共治平台
+      地址+部门。
+      组织架构？ 
+      激活。
+   
+   
+PC端查看地址：https://pcadmin-gzme53ffhtk.wuwei-propre.wudaima.com/
+测试账号
+   小程序      统一验证码 211064
+      政府端   
+         15711111111     办事员1
+         15711111112     办事员2
+         15711111113     综合领导
+         15711111114     组织领导
+         15711111115     部门领导
+      企业 
+         17838706945     企业  
+      个人1
+         新账号登录 默认就是个人
+   
+   pcweb后台   统一密码   123456
+      华治
+         18611111111    管理员
+      组织1 
+         18711111111    管理员
+
+7-28 saasbp会议纪要
+   企业
+      内：节流（saas企业内部管理）=》省钱
+      外：开源打通多个渠道。（saas集成产品（鱼塘）。（商城、））=》获得客户ts
+       氘云：钉钉买form的
+   ppt
+      saas 软件服务化
+         目标群体
+         allinone saas  全家桶saas
+         前景一片良好
+      
+      产品介绍
+      注明数据来源
+      市场再细分
+      why：解决企业痛点（内耗，）。目前saas不符合需求。定制化难。昂贵。
+         传统开发，部署费用，流量少，服务不理想 易用性，接受度。忽略服务部分 发展战略  有效整合
+      how：怎么解决
+         降低价格 流量监控 新saas架构
+      what：
+      项目展示：前后台展示
+      人员介绍;
+      团队介绍：
+      竞品分析：多个维度突出别人不能解决的问题。
+      下一步计划：针对产品核心。
+
+
+华治排期
+   app
+   订阅推荐上拉刷新 触底加载
+   日程。展示标记
+   任务消息筛选
+   公告列表
+   任务督查  
+
+   展示企业信息 
+
+
+   web
+   添加共治平台
+
+
+
+
+
+
+
+
+
