--- a/每周总结/7月.md
+++ b/每周总结/7月.md
@@ -46,7 +46,6 @@
 住公司的问题？最近还要住 需要总结工作 提升效率
 
 
-### 第二周
 ---
 #### 2020年07月08日10:38:25 星期三
 昨天 星期二
@@ -71,7 +70,7 @@
 
 这星期比较轻松 摸鱼加华治组织架构
 
-### 第二周
+### 第三周
 ---
 
 #### 2020年07月13日09:15:10 星期一
