--- a/md/临时记录.md
+++ b/md/临时记录.md
@@ -1,19 +1,23 @@
 # 一级目录
 
 
-入库单  产品查不到  供应商价格表的字段有变更
-消息*
- 消息列表
- 群组消息列表
- 消息详情
-
-我的体检
- 体检时间预约 日历 
-我的
- 我的页面
- 我的收藏列表*
- 优惠券*
-
+1. final
+   1. 修饰引用类型，引用的指向不能修改，值可以修改。
+2. String StringBuffer, StringBuilder
+   1. Builder 字符拼接问题。一个线程对应一个资源
+   2. Buffer  多个线程访问通一个资源
+3. 接口 抽象类
+   1. 接口：1.8以后接口可以有default，static 默认都是空实现
+      1. 接口多继承，类单继承
+   2. 抽象类 的方法抽不抽象都行
+4. ``` ```
+5. Integer 缓存了 -128 127 大于的时候才开辟新内存
+   1. 自动装箱 Integer.valueOf()
+   2. 自动拆箱 和基本数据类型 比较数值
+6. arrayList, LinkedList
+   1. array 查找大多数时候快
+   2. Linked 2个指针  定位查找也有一定的优势。
+   3. 
 
 
 
