--- a/每周总结/11月.md
+++ b/每周总结/11月.md
@@ -19,3 +19,28 @@
 **最后**
 熟悉框架 改bug 啥也没干
 
+
+### 第三周
+---
+#### 2020年11月19日
+
+**今天的任务目标**
+改一个bug
+
+**具体流程**
+时间| 内容|备忘
+--|--|--
+10:15| 查看公司框架
+11:15| 投资实施 存储过程修改 添加存储过程，更新门户功能点
+|签署投资协议，输入框显示隐藏  下拉改输入 
+|会议路演 ，渠道拓展 地点修改
+|可优化存储过程proc_get_project_forselect2
+|查询公司关联企业接触用户信息
+|进行 结束 行业研究sql更新
+|
+
+**最后**
+熟悉框架 改bug 啥也没干
+
+
+
